
general
======================
* End of support for compiling/running CruiseControl with JDK 1.4. New earliest supported JDK is 1.5/5.0.

contrib
======================
* Move plugins that require external libraries to build out of cruisecontrol/main. They are not under cruisecontrol/contrib/plugins. Affected plugins include:
  - AllFusionHarvest
  - Sametime
  - StarTeam
  - Yahoo

Documentation
======================
* Composite builder does not support Pause builder child element (CC-812). Reported by John Camerin
* Add documentation on "Building Plugins That Need External Libraries".

build loop
======================

ArtifactsPublisher
---------------------
* Add option to move instead of copy artifacts which can save time (CC-833). Patch by Grzegorz Oledzki.

BuildStatus
---------------------
* Add attribute 'vetoIfFailing'. Will abort the build if the project being monitored had the last build fail (CC-842).

CompositeBuilder
---------------------
* Improve processing of build results to make it faster with large log files (CC-826). Patch by David Webster.

CVS
---------------------
* Add attribute "skipEmailsFetching" for people who don't have CVSROOT/users and don't want the (harmless) messages in the log when that file isn't found (CC-841). Patch by Grzegorz Oledzki
* Add attribute 'recurseLocalWorkingCopy' which allows localWorkingCopy to point at a directory not under version control; reduces effort when project has multiple projects in parallel directories under a non-versioned root (CC-820). Based on patch by Detlef Keil.

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

DateFormat
---------------------