@@ -71,12 +71,14 @@ pause=net.sourceforge.cruisecontrol.PauseBuilder
 phing=net.sourceforge.cruisecontrol.builders.PhingBuilder
 rake=net.sourceforge.cruisecontrol.builders.RakeBuilder
 
-# label incrementer -- only one!
+# label incrementer -- only one per project
 labelincrementer=net.sourceforge.cruisecontrol.labelincrementers.DefaultLabelIncrementer
 cvslabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.CVSLabelIncrementer
+emptylabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.EmptyLabelIncrementer
 formattedlabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.FormattedLabelIncrementer
-propertyfilelabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.PropertyFileLabelIncrementer
 p4changelistlabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.P4ChangelistLabelIncrementer
+propertyfilelabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.PropertyFileLabelIncrementer
+svnlabelincrementer=net.sourceforge.cruisecontrol.labelincrementers.SVNLabelIncrementer
 
 # publishers
 antpublisher=net.sourceforge.cruisecontrol.publishers.AntPublisher
